--- a/test/fixtures/template.html
+++ b/test/fixtures/template.html
@@ -1,2 +1,2 @@
-<h2>lol</h2>
-<p>lol</p>
+<h2>This is an html template</h2>
+<p>and it should be transformed into a browserify wrapped angular template module</p>
